--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -7,6 +7,6 @@ resourceDir: resources
 DefaultContentLanguage: en
 SectionPagesMenu: main
 Paginate: 5 # this is set low for demonstrating with dummy content. Set to a higher number
-googleAnalytics:  # TODO
+googleAnalytics: G-L94GQE5C3S # TODO
 enableRobotsTXT: true
 
